--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js_ex",
+  "name": "@huhuang03/js_ex",
   "version": "1.0.1",
   "description": "js extensions",
   "main": "src/index.js",
