--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@huhuang03/js_ex",
-  "version": "1.0.2",
-  "description": "js extensions",
-  "main": "src/index.js",
+  "name": "@huhuang03/th_comm",
+  "version": "0.0.1",
+  "description": "js common utils",
+  "main": "lib/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
