--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "@huhuang03/th_comm",
-  "version": "0.0.2-rc2",
+  "version": "0.0.2-rc4",
   "description": "js common utils",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
     "prepublish": "yarn run build",
     "s_publish": "npm publish --access public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "lib/*",
+    "src/*"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
