--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "rollup -c",
+    "clean": "rm -rf lib",
     "prepublish": "yarn run build",
     "s_publish": "npm publish --access public",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,6 +23,8 @@
     "@babel/preset-typescript": "^7.15.0",
     "@types/jest": "^27.0.2",
     "babel-jest": "^27.3.1",
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "typescript": "^4.4.4"
   }
 }
