--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@huhuang03/th_comm",
+  "name": "th_comm.js",
   "version": "0.0.2-rc11",
   "description": "js common utils",
   "main": "lib/index.js",
