I think babel is ok, but jest is not ok with babel. so we will config it

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "rollup -c",
+    "build": "babel src -d lib",
     "clean": "rm -rf lib",
-    "prepublish": "yarn run build",
+    "prepublish": "jest && yarn run build",
     "s_publish": "npm publish --access public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "files": [
     "lib/*",
@@ -18,8 +18,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.15.0",
     "@types/jest": "^27.0.2",
     "babel-jest": "^27.3.1",
