--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-jest": "^27.3.1",
     "jest": "^27.3.1",
     "rollup-plugin-typescript2": "^0.30.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
 }
