ok, jest can run js file test, but ts can't. how to config it can use babel to trans ts before run test?

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rm -rf lib",
     "prepublish": "jest && yarn run build",
     "s_publish": "npm publish --access public",
-    "test": "jest"
+    "test": "yarn run build && jest"
   },
   "files": [
     "lib/*",
