yes, I don't use babel for now, becuase of the .d.ts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "babel src -d lib",
+    "build": "babel src -d lib --extensions .ts",
     "clean": "rm -rf lib",
     "prepublish": "jest && yarn run build",
     "s_publish": "npm publish --access public",
