--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf lib",
-    "prepublish": "jest && yarn run build",
-    "s_publish": "npm publish --access public",
+    "prepublish": "yarn run build && yarn run test",
     "test": "yarn run build && jest"
   },
   "files": [
